--- a/src/icbl/views/templates/admin/buat-proset.html
+++ b/src/icbl/views/templates/admin/buat-proset.html
@@ -7,7 +7,7 @@
             document.pf.ket.value=document.getElementById('ket').value;
             document.pf.jsoal.value=document.getElementById('jsoal').value;
             document.pf.waktu.value=document.getElementById('waktu').value;
-            document.pf.waktu.jumpil=document.getElementById('jumpil').value;
+            document.pf.jumpil.value=document.getElementById('jumpil').value;
             document.getElementById("pf").submit();
         }
     </script>
