--- a/src/icbl/views/templates/teacher/hasil-adk-excel.html
+++ b/src/icbl/views/templates/teacher/hasil-adk-excel.html
@@ -2,27 +2,29 @@
 
 {% block content %}
     <script>
-        vno=1;
-        var tableToExcel = (function () {
-        var uri = 'data:application/vnd.ms-excel;base64,'
-        , template = '<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:x="urn:schemas-microsoft-com:office:excel" xmlns="http://www.w3.org/TR/REC-html40"><head><!--[if gte mso 9]><xml><x:ExcelWorkbook><x:ExcelWorksheets><x:ExcelWorksheet><x:Name>{worksheet}</x:Name><x:WorksheetOptions><x:DisplayGridlines/></x:WorksheetOptions></x:ExcelWorksheet></x:ExcelWorksheets></x:ExcelWorkbook></xml><![endif]--></head><body><table>{table}</table></body></html>'
-        , base64 = function (s) { return window.btoa(unescape(encodeURIComponent(s))) }
-        , format = function (s, c) { return s.replace(/{(\w+)}/g, function (m, p) { return c[p]; }) }
-        return function (table, name, filename) {
-            if (!table.nodeType) table = document.getElementById(table)
-            var ctx = { worksheet: name || 'Worksheet', table: table.innerHTML }
+        var vno=1;
 
-            document.getElementById("dlink").href = uri + base64(format(template, ctx));
-            document.getElementById("dlink").download = filename;
-            document.getElementById("dlink").click();
+        $(document).ready(function() {
+        $("#btnExport").click(function(e) {
+        e.preventDefault();
 
-            }
-        })()
+        //getting data from our table
+        var data_type = 'data:application/vnd.ms-excel';
+        var table_div = document.getElementById('table_wrapper');
+        var table_html = table_div.outerHTML.replace(/ /g, '%20');
+
+        var a = document.createElement('a');
+        a.href = data_type + ', ' + table_html;
+        a.download = 'hasil_daya_kecoh' + Math.floor((Math.random() * 9999999) + 1000000) + '.xls';
+        a.click();
+        });
+        });
     </script>
-    <a id="dlink"  style="display:none;"></a>
     <div align="center">
-        <input type="button" onclick="tableToExcel('adk', 'adk', 'ABSADK-{{pelajaran}}-{{paket}}-kode {{kode}}.xls')" value="Export to Excel">
-    <div>
+      <button id="btnExport">Export to xls</button>
+    </div>
+    <br />
+    <div id="table_wrapper">
 
     <table border="1" align="center" name="adk" id="adk">
         <tr><td colspan="8">ABS DAYA KECOH</td></tr>
@@ -45,5 +47,5 @@
         <script>vno+=1</script>
         {% endfor %}
     </table>
-
+    </div>
 {% endblock %}
