--- a/src/icbl/views/templates/teacher/hasil-test-excel_old.html
+++ b/src/icbl/views/templates/teacher/hasil-test-excel_old.html
@@ -5,29 +5,29 @@
         var jsoal={{mdata.jsoal}};
         var kunci='{{kunci}}';
 
-        $(document).ready(function() {
-        $("#btnExport").click(function(e) {
-        e.preventDefault();
+        var tableToExcel = (function () {
+        var uri = 'data:application/vnd.ms-excel;base64,'
+        , template = '<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:x="urn:schemas-microsoft-com:office:excel" xmlns="http://www.w3.org/TR/REC-html40"><head><!--[if gte mso 9]><xml><x:ExcelWorkbook><x:ExcelWorksheets><x:ExcelWorksheet><x:Name>{worksheet}</x:Name><x:WorksheetOptions><x:DisplayGridlines/></x:WorksheetOptions></x:ExcelWorksheet></x:ExcelWorksheets></x:ExcelWorkbook></xml><![endif]--></head><body><table>{table}</table></body></html>'
+        , base64 = function (s) { return window.btoa(unescape(encodeURIComponent(s))) }
+        , format = function (s, c) { return s.replace(/{(\w+)}/g, function (m, p) { return c[p]; }) }
+        return function (table, name, filename) {
+            if (!table.nodeType) table = document.getElementById(table)
+            var ctx = { worksheet: name || 'Worksheet', table: table.innerHTML }
 
-        //getting data from our table
-        var data_type = 'data:application/vnd.ms-excel';
-        var table_div = document.getElementById('table_wrapper');
-        var table_html = table_div.outerHTML.replace(/ /g, '%20');
+            document.getElementById("dlink").href = uri + base64(format(template, ctx));
+            document.getElementById("dlink").download = filename;
+            document.getElementById("dlink").click();
 
-        var a = document.createElement('a');
-        a.href = data_type + ', ' + table_html;
-        a.download = 'hasil_test' + Math.floor((Math.random() * 9999999) + 1000000) + '.xls';
-        a.click();
-  });
-});
+        }
+    })()
     </script>
+    <a id="dlink"  style="display:none;"></a>
     <div align="center">
-      <button id="btnExport">Export to xls</button>
-    </div>
-    <br />
-    <div id="table_wrapper">
+        <!-- <input type="button" onclick="tableToExcel('hasilTo', 'hasilTo', 'hasiltest.xls')" value="Export to Excel"> -->
+        <input type="button" onclick="tableToExcel('hasilTo', 'hasilTo', '{{mdata.pelajaran}}-{{mdata.keterangan}}-kode {{mdata.kode}}.xls')" value="Export to Excel">
+    <div>
 
-    <table border="1" align="center" style="font-size: x-small" name="list" id="list">
+    <table border="1" align="center" style="font-size: x-small" name="hasilTo" id="hasilTo">
         <tr>
            <script>
                 document.write('<td align="center" colspan="'+(jsoal+4)+'">HASIL TEST</td>');
@@ -74,6 +74,6 @@
         </tr>
         {% endfor %}
     </table>
-</div>
+
 
 {% endblock %}
