change hasil test excel

--- a/src/icbl/views/templates/admin/edit-data-siswa.html
+++ b/src/icbl/views/templates/admin/edit-data-siswa.html
@@ -43,6 +43,7 @@
      </div>
      <div class="col-sm-5">
         <div class="form-group">
+          <!--
           <select id="kelas">
              {% for kls in daftarkelas %}
                 <script>
@@ -54,6 +55,8 @@
                 </script>
              {% endfor %}
           </select>
+          -->
+          <input type="text" class="form-control" id="kelas" value="{{datum.kelas}}">
         </div>
      </div>
      <div class="col-sm-5"></div>
