add ppdb feature

--- a/src/icbl/views/templates/base.html
+++ b/src/icbl/views/templates/base.html
@@ -190,6 +190,28 @@
             </ul>
         </li>
         <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Simulasi<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">PPDB</a></li>
+              <li><a href="/admin-tambah-paket-ppdb">- Tambah Paket</a></li>
+              <li><a href="/admin-edit-paket-ppdb">- View/Edit/Hapus Paket</a></li>
+              <li><a href="/admin-tambah-sma-ppdb">- Tambah SMA</a></li>
+              <li><a href="/admin-edit-sma-ppdb">- View/Edit/Hapus SMA</a></li>
+              <li><a href="/admin-tambah-daerah-ppdb">- Tambah Daerah</a></li>
+              <li><a href="#">SBMPTN</a></li>
+              <li><a href="/admin-tambah-paket-sbmptn">- Tambah Paket</a></li>
+              <li><a href="/admin-edit-paket-sbmptn">- View/Edit/Hapus Paket</a></li>
+              <li><a href="/admin-tambah-jurusan-sbmptn">- Tambah Jurusan</a></li>
+              <li><a href="/admin-edit-jurusan-sbmptn">- View/Edit/Hapus Jurusan</a></li>
+              <!--
+              <li><a href="#">STAN</a></li>
+              <li><a href="/admin-edit-kelas">- Tambah Paket</a></li>
+              <li><a href="/admin-edit-pelajaran">- Tambah Jurusan</a></li>
+              <li><a href="/admin-tambah-pelajaran">- Edit/Hapus Jurusan</a></li>
+              -->
+            </ul>
+        </li>
+        <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">GURU<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="/lihat-guru">Lihat Guru</a></li>
