laporan lengkap sekolah

--- a/src/icbl/views/templates/base.html
+++ b/src/icbl/views/templates/base.html
@@ -131,6 +131,7 @@
             <ul class="dropdown-menu">
               <li><a href="/admin-hasil-testB">BANK SET SOAL</a></li>
               <li><a href="/admin-hasil-testL">SET SOAL GURU</a></li>
+              <li><a href="/admin-paket-ppdb">PAKET PPDB</a></li>
             </ul>
         </li>
 
