hasil test simulasi ppdb

--- a/src/icbl/views/templates/admin/view-sekolah-ppdb.html
+++ b/src/icbl/views/templates/admin/view-sekolah-ppdb.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h2 align="center">DAFTAR SEKOLAH</h2>
     <h3 align="center">Klik KODE untuk Memilih Sekolah!</h3>
-    <form method="POST" action="/admin-proses-laporan-ppdb">
+    <form method="POST" action="/admin-pilih-kelas-ppdb">
     <table border="1" align="center">
         <tr><td>KODE</td><td>NAMA SEKOLAH</td><td>NPSN</td></tr>
         {% for datum in data %}
