--- a/src/icbl/views/templates/base.html
+++ b/src/icbl/views/templates/base.html
@@ -167,6 +167,7 @@
               <li><a href="/admin-abs-tk-excel"> -- Tingkat Kesulitan</a></li>
               <li><a href="/admin-abs-dp-excel"> -- Daya Pembeda</a></li>
               <li><a href="/admin-adk-excel"> -- Daya kecoh</a></li>
+              <li><a href="/admin-paket-ppdb-excell">PAKET PPDB SMA</a></li>
             </ul>
         </li>
 
